# accounting_assistant

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/api/: server.py
src/api/modules/interactions/: interactions_controller.py  interactions_dependencies.py  interactions_models.py  interactions_routes.py
src/app/: main.py
src/database/domain/: models.py
src/dependencies/: configure_container.py  services.py
src/llm/application/agents/: accounting_assistant.py  data_assistant.py  fallback_agent.py  orchestrator.py
src/llm/dependencies/: agents.py  handlers.py  services.py
src/llm/domain/models/: data_assistant.py  state.py
src/llm/events/: setup.py
src/llm/events/handlers/: incomming_message.py
src/llm/infrastructure/langgraph/: workflow_service.py
src/workflow/: graph.py  state.py
src/workflow/agents/accounting_assistant/: accounting_assistant.py  accounting_assistant_agent.py  accounting_assistant_dependencies.py  agent.py  dependencies.py
src/workflow/agents/data_assistant/: agent.py  data_assistant.py  data_assistant_dependencies.py  dependencies.py  models.py
src/workflow/agents/data_collector/: prompted_spreadsheet_builder.py  spreadsheet_service.py
src/workflow/agents/fallback/: agent.py  fallback_agent.py
src/workflow/agents/orchestrator/: agent.py  dependencies.py  (+3 more)
src/workflow/services/: prompt_service.py
tests/integration/: test_data_assistant.py  test_graph.py  test_orchestrator.py  test_spreadsheet_builder_interaction.py
tests/unit/: test_accounting_agent.py  test_spreadsheet_builder.py
(+3 files in other folders)
