[project]
name = "accounting-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "expertise-chats",
    "langchain-community>=0.4.1",
    "langgraph>=0.6.7",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.44",
    "unstructured>=0.18.14",
]


[tool.uv.sources]
expertise-chats = { git = "https://github.com/BrenDev0/expertise_chats_shared.git" }
